# tesseract-rs

./: .dockerignore  CLAUDE.md  Cargo.toml  README.md  railway.toml
.claude/handovers/: 2026-06-16-cpp-spo-corpus-handover.md  2026-06-16-tesseract-rs-headstone-exploration.md
.claude/harvest/: PARITY-ENG-DEU-STATUS.md  h2h-report.md  hiertext-probe.md  leptonica-conncomp-callgraph.txt  leptonica-morph-callgraph.txt  leptonica-pageseg-inventory.md  leptonica-rop-callgraph.txt  leptonica-scale-callgraph.txt  leptonica-sel1-callgraph.txt  makerow-callgraph-v3.txt  makerow-callgraph.txt  p6-parity-report.md  p6-perf-report.md  statistc-manifest.txt  tesseract-dict-shapes.txt  textord-class-manifest.txt  textord-manifest.ndjson
.claude/harvest/ogar-plateau/: 0001-ogar-vocab-mint-the-0x08-OCR-PDF-to-text-plan-concep.patch  PR-BODY.md  ocr-pdf-plan-mints.bundle
.claude/harvest/oracles/: binreduce_oracle.cpp  binreduce_oracle_out.txt  blob_filter_oracle.cpp  conncomp_oracle.cpp  counts_oracle.cpp  counts_oracle_out.txt  decide_if_table_oracle.cpp  decide_if_table_oracle_out.txt  def_letter_oracle.cpp  gen_blob_filter_fixtures.py  gen_makerow_fixtures.py  gen_page_fixture.py  gen_textline_fixtures.py  image_text_agnostic_oracle.cpp  image_text_oracle_ctc.cpp  makerow_oracle.cpp  morph_oracle.cpp  network_forward_oracle.cpp  otsu_oracle.cpp  pageseg2_oracle.cpp  pageseg2_oracle_out.txt  pageseg_oracle.cpp  pageseg_oracle_out.txt  pageseg_regions_oracle.cpp  pageseg_regions_oracle_out.txt  pixconv_oracle.cpp  recodebeam_oracle.cpp  recoder_oracle.cpp  run_unicharset_parity.sh  sauvola_oracle.cpp  textline_math_oracle.cpp  unichar_oracle.cpp  unicharset_oracle.cpp
.claude/harvest/ruff-plateau/: 0001-ruff_cpp_spo-walk_free_functions-the-C-library-free-.patch  0002-ruff_cpp_spo-generalize-harvest_leptonica_scale-to-t.patch  PR-BODY.md  walk-free-functions.bundle
.claude/harvest/salvage/: textord_facet.rs.salvaged  textord_facet_dump.rs.salvaged
.claude/plans/: network-ruff-ogar-sink-v1.md  pdf-to-text-ocr-v1.md  recoder-core-shape-v1.md  recognizer-core-shape-v1.md  recognizer-decode-frontend-v1.md  recognizer-image-to-text-v2.md  tesseract-rs-ast-dll-codegen-v1.md  tesseract-rs-receive-contract-v1.md
.github/workflows/: rust.yml
corpus/: README.md
corpus/golden/cli/pages/: page_01.psm6.tsv  page_01.psm6.txt  page_02.psm6.tsv  page_02.psm6.txt  page_03.psm6.tsv  page_03.psm6.txt  page_04.psm6.tsv  page_04.psm6.txt  page_05.psm6.tsv  page_05.psm6.txt  page_06.psm6.tsv  (+8 more)
corpus/golden/lines/: img_64.txt  line36.dict.tsv
corpus/golden/pages/: page_01.txt  page_02.txt  page_03.txt  page_04.txt  page_05.txt  page_07.txt  page_08.txt  page_09.txt  page_10.txt
corpus/golden/pdfs/: doc_01.txt  doc_02.txt  doc_03.txt  doc_04.txt  doc_05.txt
corpus/hiertext/: .gitignore  gen_hiertext_lines.py  run_cli_speed.py
corpus/lines/: img_100.pgm  img_16.pgm  img_24.pgm  img_40.pgm  img_64.pgm  img_8.pgm  page_roomy.pgm  page_tight.pgm
corpus/model/: README.md  deu.lstm
corpus/pages/: page_01.gt.txt  page_01.pgm  page_02.gt.txt  page_02.pgm  page_03.gt.txt  page_03.pgm  page_04.gt.txt  page_04.pgm  page_05.gt.txt  page_05.pgm  page_06.gt.txt  page_06.pgm  page_07.gt.txt  page_07.pgm  page_08.gt.txt  page_08.pgm  page_09.gt.txt  page_09.pgm  page_10.gt.txt  page_10.pgm
corpus/pdfs/: doc_01.gt.txt  doc_02.gt.txt  doc_03.gt.txt  doc_04.gt.txt
crates/tesseract-core/: Cargo.toml
crates/tesseract-core/examples/: beam_dump.rs  dict_walk_dump.rs
crates/tesseract-core/src/: dict_walker.rs  lib.rs  recodebeam.rs
crates/tesseract-ocr/: Cargo.toml
crates/tesseract-ocr-pdf/: Cargo.toml
crates/tesseract-ocr-pdf/examples/: make_scanned_pdf.rs  par_bench.rs
crates/tesseract-ocr-pdf/src/: image_extract.rs  layout.rs  lib.rs  main.rs  parallel.rs  searchable_pdf.rs
crates/tesseract-ocr-pdf/tests/: golden_pdfs.rs  image_extract.rs  parallel_determinism.rs  text_layer.rs
crates/tesseract-ocr-python/: Cargo.toml  README.md  pyproject.toml
crates/tesseract-ocr-python/src/: lib.rs
crates/tesseract-ocr-web/: Cargo.toml  Dockerfile  README.md
crates/tesseract-ocr-web/src/: api.rs  fetch.rs  main.rs  ocr.rs  routes.rs  state.rs
crates/tesseract-ocr-web/templates/: debug.html  index.html  result.html
crates/tesseract-ocr/examples/: areamap_dump.rs  blob_filter_dump.rs  conncomp_dump.rs  golden_bench.rs  golden_report.rs  h2h_compare.rs  h2h_speed.rs  lstm_recognizer_dump.rs  makerow_dump.rs  morph_dump.rs  network_dump.rs  otsu_dump.rs  pixconv_dump.rs  pixscale_dump.rs  recognize_grid_dump.rs  recognize_image_dict_dump.rs  recognize_image_dump.rs  recognize_page_dump.rs  recognize_page_makerow_dump.rs  recognize_words_dump.rs  render_page_hocr.rs  render_page_tsv.rs  sauvola_dump.rs  scale_li_dump.rs  skip_fraction.rs  textline_math_dump.rs  unsharp_dump.rs
crates/tesseract-ocr/src/: binarize.rs  binreduce.rs  blob_filter.rs  conncomp.rs  image_input.rs  lib.rs  line_segment.rs  lstm_recognizer.rs  morph.rs  morphapp.rs  network.rs  page_furniture.rs  pageseg.rs  rectify.rs  renderer.rs  seedfill.rs  segment.rs  stats.rs  structured.rs  textline.rs  threshold.rs  xy_cut.rs
crates/tesseract-ocr/tests/: golden_lines.rs  golden_pages.rs
crates/tesseract-ogar/: Cargo.toml
crates/tesseract-ogar/examples/: ocr_demo.rs  v3_facet_probe.rs
crates/tesseract-ogar/src/: lib.rs  v3_facet.rs
crates/tesseract-ogar/tests/: v3_facet_parity.rs
crates/tesseract-recognizer/: Cargo.toml
crates/tesseract-recognizer/examples/: activation_dump.rs  conv2d_dump.rs  from_pix_dump.rs  fully_connected_dump.rs  graph_dump.rs  lstm_dump.rs  netio_dump.rs  recognizer_dump.rs  weightmatrix_dump.rs
crates/tesseract-recognizer/src/: activation.rs  fully_connected.rs  graph.rs  input.rs  layers2d.rs  lib.rs  lstm.rs  networkio.rs  stridemap.rs  trand.rs  weight_matrix.rs
docs/: CONSUMER-GUIDE.md  NIEDRIGE-KONFIDENZ-ESKALATION.md  SDK-PYTHON-AND-POWER-PLATFORM.md  SIMD-AND-WASM.md  UNTERSCHIEDE-ZUM-UPSTREAM.md
integrations/power-platform/: README.md  apiDefinition.swagger.json  apiProperties.json
