[package]
name          = "tesseract"
version       = "0.15.2"
authors       = ["Kevin Kwok <antimatter15@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
documentation = "https://docs.rs/tesseract"
repository    = "https://github.com/antimatter15/tesseract-rs"
description   = "Higher-level bindings for Tesseract OCR"
license       = "MIT"
keywords      = ["tesseract", "OCR", "bindings"]
categories    = ["api-bindings", "multimedia::images"]

[dependencies]
tesseract-sys = "~0.6"
tesseract-plumbing = { version="~0.11.1", default-features = false }
thiserror = "1.0"

[features]
default = ["tesseract_5_2"]
tesseract_5_2 = ["tesseract-plumbing/tesseract_5_2"]

[package.metadata.docs.rs]
# docs.rs is not compatible with tesseract_5_2
no-default-features = true

# ── Pure-Rust transcode workspace (operator directive: transcode Tesseract into
# Rust, do NOT wrap libtesseract). The root `tesseract` package stays the legacy
# FFI wrapper, untouched; `crates/tesseract-core` is the pure-Rust target that
# consumes the byte-parity-proven OGAR adapters and grows as the FFI shrinks.
[workspace]
members = ["crates/tesseract-core"]
resolver = "2"

