# tesseract-rs — pure-Rust transcode of Tesseract OCR.
#
# The original antimatter15 FFI wrapper (`tesseract-sys` / `tesseract-plumbing`
# bindings to the C++ libtesseract) was DELETED 2026-06-18 per the operator
# directive: transcode Tesseract into Rust, do NOT wrap libtesseract.
#
# This is a virtual workspace. The OCR is rebuilt leaf-by-leaf in pure Rust
# under `crates/`, each leaf byte-parity-proven against the C++ original
# (source: AdaWorldAPI/Tesseract) before it lands. The transcoded primitives
# ride the OGAR Core (`lance-graph-contract`) per the Core-First doctrine.
[workspace]
members = ["crates/tesseract-core", "crates/tesseract-ocr", "crates/tesseract-recognizer", "crates/tesseract-ocr-pdf", "crates/tesseract-ogar"]
resolver = "2"
