[package]
name = "tesseract-ocr-python"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Python SDK (PyO3/maturin) for tesseract-rs -- pure-Rust, byte-parity Tesseract OCR (eng + deu). Thin adapter over tesseract-ogar::OcrExecutor: no new recognition logic, no libtesseract, no leptonica, no C at runtime. See docs/SDK-PYTHON-AND-POWER-PLATFORM.md Section 1."
publish = false

[lib]
# The artifact name IS the importable Python module name (`import tesseract_rs`).
name = "tesseract_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
# The ONE non-pyo3 dependency -- BBB-clean, per
# docs/SDK-PYTHON-AND-POWER-PLATFORM.md Section 1's dependency table
# ("Python | crates/tesseract-ocr-python | nur `tesseract-ogar` (BBB-sauber)")
# and this crate's own worker brief ("Standalone/BBB-clean: depend only on
# tesseract-ogar (path) + pyo3. No lance-graph engine, no OGAR brain crates.").
#
# `image-decode` is enabled unconditionally (not left as an optional feature
# on THIS crate) because every public `Engine` method takes raw encoded image
# bytes (PNG/JPEG/WebP/TIFF/GIF/BMP/PNM) with no width/height parameter -- per
# the design doc's exact Python signatures (`recognize_document(image_bytes)`
# etc.) -- so decoding must happen inside this crate via
# `tesseract_ogar::decode_image` (pure Rust, re-exported from tesseract_ocr,
# bomb-bounded: dimension/pixel/alloc caps).
tesseract-ogar = { path = "../tesseract-ogar", features = ["image-decode"] }
# `doc.v1` comes back from `OcrExecutor::execute` as a JSON string
# (`OcrResponse::DocumentOut::doc_json`). Parsed here into a native Python
# `dict` via a small recursive `serde_json::Value` -> `PyObject` converter
# (see `json_to_py` in src/lib.rs), so `doc["pages"][0]["regions"]` is
# directly iterable -- callers never have to `json.loads` it themselves.
serde_json = "1"
