# tesseract-ocr-web — a single-binary web demo for the pure-Rust OCR.
#
# The whole point: this server does OCR with ZERO C libraries — no
# libtesseract, no leptonica, no OpenCV. Just the Rust recognizer + the eng
# model. The Docker image is the static-ish binary + ~4 MB of model data.
[package]
name = "tesseract-ocr-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
publish = false

[[bin]]
name = "tesseract-ocr-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
askama = "0.12"
tower-http = { version = "0.5", features = ["limit"] }
# Image decode for uploads — all pure-Rust decoders (no C deps): the raster
# photo formats (PNG/JPEG/WebP/GIF/BMP), the classic scan container TIFF, and
# PNM (PGM/PPM). `image` 0.25 dropped its C-backed decoders, so every one of
# these keeps the "zero C libraries at runtime" promise.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "gif", "bmp", "pnm"] }
# URL fetch for the "web link" arm — rustls ONLY (never openssl), keeps the
# Docker image lean and free of a system TLS dependency.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false }
# The pure-Rust OCR.
tesseract-ocr = { path = "../tesseract-ocr" }
tesseract-core = { path = "../tesseract-core" }
# The pure-Rust PDF + layout front-end (searchable-PDF "A" + doc.v1-reconstruction
# "B", plus the HTML preview projection). `default-features = false` drops the
# `parallel`/rayon feature — the web demo renders one page at a time, so it needs
# only the layout/render surface (lopdf + flate2 + serde_json, all pure Rust,
# BBB-clean: no OGAR, no lance-graph engine).
tesseract-ocr-pdf = { path = "../tesseract-ocr-pdf", default-features = false }
# doc.v1 JSON parse for the debug/overlay/searchable-word surface (pure Rust,
# already in the workspace lockfile via tesseract-ocr-pdf).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Power Platform connector surface (`src/api.rs`): decodes the `content_base64`
# field of the `{content_base64, lang}` JSON request-body alternative to a raw
# binary body. Already resolved to 0.22.1 elsewhere in the workspace lockfile
# (transitive), so this adds no new version to reconcile.
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] } # ServiceExt::oneshot for router tests
