[package]
name = "tesseract-ocr"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Pure-Rust Tesseract OCR assembly tier — loads the .lstm network into a runnable tree and composes the recognizer compute (tesseract-recognizer) with the content/decode surfaces (tesseract-core) into RecognizeLine."

[dependencies]
# The two foundations (path deps, fork-only policy):
# compute — NetworkIo/StrideMap/TRand grid + layer forwards + WeightMatrix/Lstm parsers.
tesseract-recognizer = { path = "../tesseract-recognizer" }
# content — charset + recoder + CTC beam (re-exports the lance-graph-contract Core surfaces).
tesseract-core = { path = "../tesseract-core" }
# Pure-Rust PNG/JPEG/… container decode for `image_input::decode_image`
# (feature-gated so the default surface stays PGM/RGB-only, no extra deps).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "tiff",
    "gif",
    "bmp",
    "pnm",
], optional = true }

[features]
# D3.0 (Batch 3-alt): the projection-profile line segmenter + page-level
# recognition composition. MARKED APPROXIMATION — not a Tesseract transcode;
# replaced by the textord parity batches (plan §P3). Gated so it can never be
# mistaken for a proven leaf on the crate's default surface.
seg-approx = []
# Pure-Rust encoded-image (PNG/JPEG/WebP/TIFF/GIF/BMP/PNM) → grey decode, so a
# consumer hands the OGAR executor container bytes without wiring `image` itself.
image-decode = ["dep:image"]

[[example]]
name = "recognize_page_dump"
required-features = ["seg-approx"]

# skip_fraction is `#![cfg(feature = "seg-approx")]` (it uses find_text_lines);
# gate it so the default `--all-targets` clippy/build job doesn't try to compile
# an empty (no-main) example (codex P2).
[[example]]
name = "skip_fraction"
required-features = ["seg-approx"]
